--- a/src/components/register.css
+++ b/src/components/register.css
@@ -1,27 +1,27 @@
 .register-form {
-  width: 90%;
-  margin: 10px auto;
-}
-.register-form-desktop {
   width: 450px;
+  height: 590px;
+  border: 1px solid rgb(202, 202, 202);
   margin: 50px auto;
 }
-
 .form {
   height: 100%;
-  width: 100%;
 }
 .form div {
-  margin: 23px 9px;
+  margin: 23px 22px;
 }
 .title {
   display: flex;
   justify-content: left;
   align-items: center;
   height: 33px;
+  background-color: #333333;
+  color: #ffffff;
   padding-left: 22px;
 }
 .sb-btn {
+  background-color: #333333;
+  color: #ffffff;
   width: 90px;
   height: 30px;
   outline: none;
@@ -31,24 +31,21 @@
   cursor: pointer;
 }
 input {
-  border-style: none none solid none;
-  border-width: 0px;
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 4px;
+  height: 25px;
+  width: 100%;
   font-size: 0.9em;
 }
-textarea {
-  border-style: none none solid none;
-  border-width: 1px;
-  border-radius: 3px;
-  width: 100%;
-  height: 40px;
-  font-size: 0.9em;
-  resize: none;
+.form input.error {
+  border-color: red;
 }
 input:focus {
   outline: none;
 }
 .note {
   display: block;
+  color: rgba(111, 95, 95, 0.67);
   font-size: 0.7em;
 }
 .sb-text {
@@ -57,12 +54,14 @@ input:focus {
 }
 .sb-text a {
   text-decoration: none;
+  color: #337ab7;
 }
 label {
   display: block;
 }
 .required-field {
   display: none;
+  color: red;
   font-size: 0.7em;
 }
 .hidden {
@@ -80,6 +79,7 @@ label {
   right: 0;
   bottom: 0;
   margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 .modal-content {
   position: absolute;
@@ -90,8 +90,11 @@ label {
   right: 25%;
   top: 11%;
   bottom: 25%;
+  background: white;
 }
 .modal button {
+  background-color: #4251af;
+  color: #ffffff;
   width: 90px;
   height: 30px;
   outline: none;
@@ -106,6 +109,8 @@ label {
   justify-content: left;
   align-items: center;
   height: 33px;
+  background-color: #4251af;
+  color: #ffffff;
   padding-left: 22px;
   margin-bottom: 40px;
 }
@@ -121,78 +126,6 @@ label {
   overflow: hidden;
   max-width: 80%;
 }
-.textfield {
-  padding: 0px;
-  margin: 0px;
-  display: flex;
-  flex-direction: row;
-  height: 47px;
-  width: 100%;
-  border-radius: 3px;
-}
-.prefieldLink {
-  padding-left: 3px;
-  padding-right: 2px;
-  padding-top: 7px;
-  font-size: 0.7em;
-  flex: 8;
-}
-
-#socialTextField {
-  flex: 17;
-}
-
-#textFieldOnTheLeft {
-  float: left;
-}
-
-.textfield-button {
-  float: left;
-  background-color: black;
-  width: 37px;
-}
-
-.enter-event-embedded-button {
-  height: auto;
-  width: 100%;
-}
-
-.k-text-field {
-  width: 100%;
-  height: 40px;
-}
-
-.back-button-container {
-  padding: 10px 0px;
-}
-
-.back-button {
-  display: flex;
-  flex-direction: row;
-  height: 28px;
-  line-height: 28px;
-}
-.back-button-icon {
-  padding-right: 6px;
-  font-weight: bold;
-  font-size: 26px;
-  font-family: "Futura";
-}
-.back-button-text {
-  font-size: 17px;
-  font-family: Arial;
-}
-
-.register-details-header,
-.register-details-subheader {
-  color: white;
-  padding-left: 35px;
-  padding-right: 35px;
-}
-
-.register-details-header {
-  font-weight: bold;
-  font-size: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.modal-input-value {
+  border-bottom: 1px solid rgb(202, 202, 202);
 }
